Added file normalization